Fix line height cut off for windows FF/Chrome in input boxes

--- a/css/style.css
+++ b/css/style.css
@@ -1302,9 +1302,9 @@ ul.tree > li > ul > li > ul > li > ul > li > ul {
 #documentSettings form .dropdownatron-container {
   height: 40px;
   width: 100%;
-  line-height: 20px;
+  line-height: 23px;
   border: 1px solid #CCCCCC;
-  padding: 10px;
+  padding: 10px 10px 7px 10px;
   background-color: #FFFFFF;
   -webkit-transition: 0.2s all ease;
   -moz-transition: 0.2s all ease;
