--- a/less/media/media-large-desktop.less
+++ b/less/media/media-large-desktop.less
@@ -777,9 +777,9 @@ ul.tree {
         input, textarea, select, .dropdownatron-container {
             height: 40px;
             width: 100%;
-            line-height: 20px;
+            line-height: 23px;
             border: 1px solid #CCCCCC;
-            padding: 10px;
+            padding: 10px 10px 7px 10px;
             background-color: #FFFFFF;
             .transitions();
             font-family: @bodycopy;
